--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     build:
         docker:
         # specify the version you desire here
-        - image: circleci/openjdk:11-browsers-legacy
+        - image: circleci/openjdk:8-browsers-legacy
 
         # Specify service dependencies here if necessary
         # CircleCI maintains a library of pre-built images
@@ -40,4 +40,4 @@ jobs:
               key: v1-dependencies-{{ checksum "pom.xml" }}
 
         # run tests!
-        - run: mvn install
+        - run: mvn integration-test
